--- a/src/EJS/views/layout.twig
+++ b/src/EJS/views/layout.twig
@@ -2,7 +2,7 @@
 <html>
 <head lang="pt">
     <meta charset="UTF-8">
-    <title>Fase 3 API e Silex</title>
+    <title>Fase 4 API e Silex - APIs Públicas</title>
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +13,7 @@
             {% block content %}
             {% endblock %}
             <footer>
-                <p>Fase 3 API e Silex | &copy Todos os direitos reservados</p>
+                <p>Fase 4 API e Silex - APIs Públicas | &copy Todos os direitos reservados</p>
             </footer>
         </div><!-- /col-md-12 -->
     </div><!-- /row -->
